Align social icons correctly

--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -56,8 +56,9 @@ h1 span {
 .main__text {
     font-size: 0.9375rem;
     line-height: 1.5625rem;
-    color: var(--color-white);
+    color: var(--color-very-lght-grey);
     margin-bottom: 3rem;
+    
 }
 
 .main__error-msg {
@@ -83,6 +84,7 @@ h1 span {
 .main__container {
     padding: 2rem;
     text-align: center;
+    max-width: 45rem;
 }
 
 .main__socials-list {
@@ -93,12 +95,13 @@ h1 span {
     margin-bottom: 4rem;
 }
 
-.main__socials-item {
-    height: 0.5rem;
+.main__socials-list img {
+    width: 4rem;
+    opacity: 0.6;
 }
 
 .main__form {
-
+    max-width: 26rem;
 }
 
 .main__input {
